--- a/Oasis_Web/Views/Dashboard/Index.cshtml
+++ b/Oasis_Web/Views/Dashboard/Index.cshtml
@@ -3,46 +3,46 @@
     ViewBag.Title = "Dashboard";
     ViewBag.pTitle = "Dashboard";
     ViewBag.pageTitle = "Synovora";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
-    if (ViewBag.ModeName == Constants.LAYOUT_VERTICAL)
-    {
-        Layout = "~/Views/Shared/_Layout.cshtml";
-    }
-    else if (ViewBag.ModeName == Constants.LAYOUT_HORIZONTAL)
-    {
-        Layout = "~/Views/Shared/Layouts/_layout_horizontal.cshtml";
-        ViewBag.pTitle = "Horizontal";
-    }
-    else if (ViewBag.ModeName == Constants.LAYOUT_LIGHT_SIDEBAR)
-    {
-        Layout = "~/Views/Shared/Layouts/_layout_light_sidebar.cshtml";
-        ViewBag.pTitle = "Light Sidebar";
-    }
-    else if (ViewBag.ModeName == Constants.LAYOUT_COMPACT_SIDEBAR)
-    {
-        Layout = "~/Views/Shared/Layouts/_layout_compact_sidebar.cshtml";
-        ViewBag.pTitle = "Compact Sidebar";
-    }
-    else if (ViewBag.ModeName == Constants.LAYOUT_ICON_SIDEBAR)
-    {
-        Layout = "~/Views/Shared/Layouts/_layout_icon_sidebar.cshtml";
-        ViewBag.pTitle = "Icon Sidebar";
-    }
-    else if (ViewBag.ModeName == Constants.LAYOUT_BOXED)
-    {
-        Layout = "~/Views/Shared/Layouts/_layout_boxed.cshtml";
-        ViewBag.pTitle = "Boxed Layout";
-    }
-    else if (ViewBag.ModeName == Constants.LAYOUT_PRELOADER)
-    {
-        Layout = "~/Views/Shared/Layouts/_layout_preloader.cshtml";
-        ViewBag.pTitle = "Preloader";
-    }
-    else if (ViewBag.ModeName == Constants.LAYOUT_COLORED_SIDEBAR)
-    {
-        Layout = "~/Views/Shared/Layouts/_layout_colored_sidebar.cshtml";
-        ViewBag.pTitle = "Colored Sidebar";
-    }
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    //if (ViewBag.ModeName == Constants.LAYOUT_VERTICAL)
+    //{
+    //    Layout = "~/Views/Shared/_Layout.cshtml";
+    //}
+    //else if (ViewBag.ModeName == Constants.LAYOUT_HORIZONTAL)
+    //{
+    //    Layout = "~/Views/Shared/Layouts/_layout_horizontal.cshtml";
+    //    ViewBag.pTitle = "Horizontal";
+    //}
+    //else if (ViewBag.ModeName == Constants.LAYOUT_LIGHT_SIDEBAR)
+    //{
+    //    Layout = "~/Views/Shared/Layouts/_layout_light_sidebar.cshtml";
+    //    ViewBag.pTitle = "Light Sidebar";
+    //}
+    //else if (ViewBag.ModeName == Constants.LAYOUT_COMPACT_SIDEBAR)
+    //{
+    //    Layout = "~/Views/Shared/Layouts/_layout_compact_sidebar.cshtml";
+    //    ViewBag.pTitle = "Compact Sidebar";
+    //}
+    //else if (ViewBag.ModeName == Constants.LAYOUT_ICON_SIDEBAR)
+    //{
+    //    Layout = "~/Views/Shared/Layouts/_layout_icon_sidebar.cshtml";
+    //    ViewBag.pTitle = "Icon Sidebar";
+    //}
+    //else if (ViewBag.ModeName == Constants.LAYOUT_BOXED)
+    //{
+    //    Layout = "~/Views/Shared/Layouts/_layout_boxed.cshtml";
+    //    ViewBag.pTitle = "Boxed Layout";
+    //}
+    //else if (ViewBag.ModeName == Constants.LAYOUT_PRELOADER)
+    //{
+    //    Layout = "~/Views/Shared/Layouts/_layout_preloader.cshtml";
+    //    ViewBag.pTitle = "Preloader";
+    //}
+    //else if (ViewBag.ModeName == Constants.LAYOUT_COLORED_SIDEBAR)
+    //{
+    //    Layout = "~/Views/Shared/Layouts/_layout_colored_sidebar.cshtml";
+    //    ViewBag.pTitle = "Colored Sidebar";
+    //}
 }
 
 <div class="row">
@@ -52,8 +52,8 @@
                 <div class="row">
                     <div class="col-7">
                         <div class="text-primary p-3">
-                            <h5 class="text-primary">Welcome Back !</h5>
-                            <p>Skote Dashboard</p>
+                            <h5 class="text-primary">Bienvenue !EEEEEEEEE</h5>
+                            <p>Profil Patient</p>
                         </div>
                     </div>
                     <div class="col-5 align-self-end">
@@ -67,32 +67,30 @@
                         <div class="avatar-md profile-user-wid mb-4">
                             <img src="~/assets/images/users/avatar-1.jpg" alt="" class="img-thumbnail rounded-circle">
                         </div>
-                        <h5 class="font-size-15 text-truncate">Henry Price</h5>
-                        <p class="text-muted mb-0 text-truncate">UI/UX Designer</p>
+                        <h5 class="font-size-15 text-truncate">Henry Demoi</h5>
+                        <p class="text-muted mb-0 text-truncate">Patient</p>
                     </div>
-
                     <div class="col-sm-8">
                         <div class="pt-4">
-
                             <div class="row">
                                 <div class="col-6">
                                     <h5 class="font-size-15">125</h5>
-                                    <p class="text-muted mb-0">Projects</p>
+                                    <p class="text-muted mb-0">Episodes</p>
                                 </div>
                                 <div class="col-6">
-                                    <h5 class="font-size-15">$1245</h5>
-                                    <p class="text-muted mb-0">Revenue</p>
+                                    <h5 class="font-size-15">2</h5>
+                                    <p class="text-muted mb-0">Traitements</p>
                                 </div>
                             </div>
                             <div class="mt-4">
-                                <a href="" class="btn btn-primary waves-effect waves-light btn-sm">View Profile <i class="mdi mdi-arrow-right ml-1"></i></a>
+                                <a href="" class="btn btn-primary waves-effect waves-light btn-sm">Voir Profil <i class="mdi mdi-arrow-right ml-1"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card">
+        @*<div class="card">
             <div class="card-body">
                 <h4 class="card-title mb-4">Monthly Earning</h4>
                 <div class="row">
@@ -113,11 +111,11 @@
                 </div>
                 <p class="text-muted mb-0">We craft digital, graphic and dimensional thinking.</p>
             </div>
-        </div>
+        </div>*@
     </div>
     <div class="col-xl-8">
         <div class="row">
-            <div class="col-md-4">
+            @*<div class="col-md-4">
                 <div class="card mini-stats-wid">
                     <div class="card-body">
                         <div class="media">
@@ -134,8 +132,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
+            </div>*@
+            @*<div class="col-md-4">
                 <div class="card mini-stats-wid">
                     <div class="card-body">
                         <div class="media">
@@ -152,8 +150,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-4">
+            </div>*@
+            @*<div class="col-md-4">
                 <div class="card mini-stats-wid">
                     <div class="card-body">
                         <div class="media">
@@ -170,13 +168,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>*@
         </div>
         <!-- end row -->
 
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title mb-4 float-sm-left">Email Sent</h4>
+                <h4 class="card-title mb-4 float-sm-left">Paramatere d'Auto-Suivi</h4>
                 <div class="float-sm-right">
                     <ul class="nav nav-pills">
                         <li class="nav-item">
@@ -198,7 +196,7 @@
 </div>
 <!-- end row -->
 
-<div class="row">
+@*<div class="row">
     <div class="col-xl-4">
         <div class="card">
             <div class="card-body">
@@ -385,10 +383,10 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 <!-- end row -->
 
-<div class="row">
+@*<div class="row">
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
@@ -435,7 +433,6 @@
                                     <i class="fab fa-cc-mastercard mr-1"></i> Mastercard
                                 </td>
                                 <td>
-                                    <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-primary btn-sm btn-rounded waves-effect waves-light" data-toggle="modal" data-target=".exampleModal">
                                         View Details
                                     </button>
@@ -464,7 +461,6 @@
                                     <i class="fab fa-cc-visa mr-1"></i> Visa
                                 </td>
                                 <td>
-                                    <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-primary btn-sm btn-rounded waves-effect waves-light" data-toggle="modal" data-target=".exampleModal">
                                         View Details
                                     </button>
@@ -493,7 +489,6 @@
                                     <i class="fab fa-cc-paypal mr-1"></i> Paypal
                                 </td>
                                 <td>
-                                    <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-primary btn-sm btn-rounded waves-effect waves-light" data-toggle="modal" data-target=".exampleModal">
                                         View Details
                                     </button>
@@ -521,7 +516,6 @@
                                     <i class="fab fa-cc-mastercard mr-1"></i> Mastercard
                                 </td>
                                 <td>
-                                    <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-primary btn-sm btn-rounded waves-effect waves-light" data-toggle="modal" data-target=".exampleModal">
                                         View Details
                                     </button>
@@ -549,7 +543,6 @@
                                     <i class="fab fa-cc-visa mr-1"></i> Visa
                                 </td>
                                 <td>
-                                    <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-primary btn-sm btn-rounded waves-effect waves-light" data-toggle="modal" data-target=".exampleModal">
                                         View Details
                                     </button>
@@ -577,7 +570,6 @@
                                     <i class="fab fa-cc-paypal mr-1"></i> Paypal
                                 </td>
                                 <td>
-                                    <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-primary btn-sm btn-rounded waves-effect waves-light" data-toggle="modal" data-target=".exampleModal">
                                         View Details
                                     </button>
@@ -586,14 +578,14 @@
                         </tbody>
                     </table>
                 </div>
-                <!-- end table-responsive -->
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 <!-- Modal -->
-<div class="modal fade exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+@*<div class="modal fade exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -677,7 +669,7 @@
             </div>
         </div>
     </div>
-</div><!-- end Modal -->
+</div>*@<!-- end Modal -->
 <!-- End Page-content -->
 @section scripts{
     <!-- apexcharts -->
