--- a/Oasis_Web/Views/Shared/_sidebar.cshtml
+++ b/Oasis_Web/Views/Shared/_sidebar.cshtml
@@ -12,11 +12,11 @@
                 <li>
                     <a href="@Url.Action("Index","Dashboard")" class="waves-effect">
                         <i class="bx bx-home-circle"></i><span class="badge badge-pill badge-info float-right">3</span>
-                        <span>Dashboard</span>
+                        <span>Tableau de Bord</span>
                     </a>
                 </li>
 
-                <li>
+                @*<li>
                     <a href="javascript: void(0);" class="has-arrow waves-effect">
                         <i class="bx bx-layout"></i>
                         <span>Layouts</span>
@@ -30,18 +30,18 @@
                         <li><a href="@Url.Action("layout-preloader","Layouts")">Preloader</a></li>
                         <li><a href="@Url.Action("layout-colored-sidebar","Layouts")">Colored Sidebar</a></li>
                     </ul>
-                </li>
+                </li>*@
 
-                <li class="menu-title">Apps</li>
+                @*<li class="menu-title">Apps</li>*@
 
-                <li>
+                @*<li>
                     <a href="@Url.Action("Index","Calendar")" class=" waves-effect">
                         <i class="bx bx-calendar"></i>
                         <span>Calendar</span>
                     </a>
-                </li>
+                </li>*@
 
-                <li>
+                @*<li>
                     <a href="javascript: void(0);" class="has-arrow waves-effect">
                         <i class="bx bx-store"></i>
                         <span>Ecommerce</span>
@@ -265,7 +265,7 @@
                             </ul>
                         </li>
                     </ul>
-                </li>
+                </li>*@
 
             </ul>
         </div>
