--- a/Oasis_Web/Views/Shared/_topbar.cshtml
+++ b/Oasis_Web/Views/Shared/_topbar.cshtml
@@ -5,19 +5,23 @@
             <div class="navbar-brand-box">
                 <a href="@Url.Action("Index","Dashboard")" class="logo logo-dark">
                     <span class="logo-sm">
-                        <img src="~/assets/images/logo.svg" alt="" height="22">
+                        <h1 height="22">Synovora</h1>
+                        @*<img src="~/assets/images/logo.svg" alt="" height="22">*@
                     </span>
                     <span class="logo-lg">
-                        <img src="~/assets/images/logo-dark.png" alt="" height="17">
+                        <h1 height="22">Synovora</h1>
+                        @*<img src="~/assets/images/logo-dark.png" alt="" height="17">*@
                     </span>
                 </a>
 
                 <a href="@Url.Action("Index","Dashboard")" class="logo logo-light">
                     <span class="logo-sm">
-                        <img src="~/assets/images/logo-light.svg" alt="" height="22">
+                        <h1 height="22">Synovora</h1>
+                        @*<img src="~/assets/images/logo-light.svg" alt="" height="22">*@
                     </span>
                     <span class="logo-lg">
-                        <img src="~/assets/images/logo-light.png" alt="" height="19">
+                        <h1 height="22">Synovora</h1>
+                        @*<img src="~/assets/images/logo-light.png" alt="" height="19">*@
                     </span>
                 </a>
             </div>
@@ -29,12 +33,12 @@
             <!-- App Search-->
             <form class="app-search d-none d-lg-block">
                 <div class="position-relative">
-                    <input type="text" class="form-control" placeholder="Search...">
+                    <input type="text" class="form-control" placeholder="Rechercher...">
                     <span class="bx bx-search-alt"></span>
                 </div>
             </form>
 
-            <div class="dropdown dropdown-mega d-none d-lg-block ml-2">
+            @*<div class="dropdown dropdown-mega d-none d-lg-block ml-2">
                 <button type="button" class="btn header-item waves-effect" data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
                     Mega Menu
                     <i class="mdi mdi-chevron-down"></i>
@@ -163,12 +167,12 @@
                     </div>
 
                 </div>
-            </div>
+            </div>*@
         </div>
 
         <div class="d-flex">
 
-            <div class="dropdown d-inline-block d-lg-none ml-2">
+            @*<div class="dropdown d-inline-block d-lg-none ml-2">
                 <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-search-dropdown"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="mdi mdi-magnify"></i>
@@ -187,38 +191,33 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div>*@
 
-            <div class="dropdown d-inline-block">
+            @*<div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img class="" src="~/assets/images/flags/us.jpg" alt="Header Language" height="16">
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
-
-                    <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
                         <img src="~/assets/images/flags/spain.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Spanish</span>
                     </a>
 
-                    <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
                         <img src="~/assets/images/flags/germany.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">German</span>
                     </a>
 
-                    <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
                         <img src="~/assets/images/flags/italy.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Italian</span>
                     </a>
 
-                    <!-- item-->
                     <a href="javascript:void(0);" class="dropdown-item notify-item">
                         <img src="~/assets/images/flags/russia.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Russian</span>
                     </a>
                 </div>
-            </div>
+            </div>*@
 
-            <div class="dropdown d-none d-lg-inline-block ml-1">
+            @*<div class="dropdown d-none d-lg-inline-block ml-1">
                 <button type="button" class="btn header-item noti-icon waves-effect"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="bx bx-customize"></i>
@@ -268,13 +267,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>*@
 
-            <div class="dropdown d-none d-lg-inline-block ml-1">
+            @*<div class="dropdown d-none d-lg-inline-block ml-1">
                 <button type="button" class="btn header-item noti-icon waves-effect" data-toggle="fullscreen">
                     <i class="bx bx-fullscreen"></i>
                 </button>
-            </div>
+            </div>*@
 
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item noti-icon waves-effect" id="page-header-notifications-dropdown"
@@ -372,9 +371,8 @@
                     <i class="mdi mdi-chevron-down d-none d-xl-inline-block"></i>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right">
-                    <!-- item-->
                     <a class="dropdown-item" href="#"><i class="bx bx-user font-size-16 align-middle mr-1"></i> Profile</a>
-                    <a class="dropdown-item" href="#"><i class="bx bx-wallet font-size-16 align-middle mr-1"></i> My Wallet</a>
+                    @*<a class="dropdown-item" href="#"><i class="bx bx-wallet font-size-16 align-middle mr-1"></i> My Wallet</a>*@
                     <a class="dropdown-item d-block" href="#"><span class="badge badge-success float-right">11</span><i class="bx bx-wrench font-size-16 align-middle mr-1"></i> Settings</a>
                     <a class="dropdown-item" href="#"><i class="bx bx-lock-open font-size-16 align-middle mr-1"></i> Lock screen</a>
                     <div class="dropdown-divider"></div>
