--- a/Oasis_Web/Views/Pages/pages-faqs.cshtml
+++ b/Oasis_Web/Views/Pages/pages-faqs.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "FAQs";
     ViewBag.pTitle = "FAQs";
     ViewBag.pageTitle = "Utility";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.vbhtml";
 }
 
 <div class="checkout-tabs">
