--- a/Oasis_Web/Views/Pages/pages-pricing.cshtml
+++ b/Oasis_Web/Views/Pages/pages-pricing.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Pricing";
     ViewBag.pTitle = "Pricing";
     ViewBag.pageTitle = "Utility";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.vbhtml";
 }
 
 <div class="row justify-content-center">
