--- a/Oasis_Web/Views/Pages/pages-starter.cshtml
+++ b/Oasis_Web/Views/Pages/pages-starter.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Starter Page";
     ViewBag.pTitle = "Starter Page";
     ViewBag.pageTitle = "Utility";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.vbhtml";
 }
 
 @section scripts{
