--- a/Oasis_Web/Views/Pages/pages-timeline.cshtml
+++ b/Oasis_Web/Views/Pages/pages-timeline.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Timeline";
     ViewBag.pTitle = "Timeline";
     ViewBag.pageTitle = "Utility";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.vbhtml";
 }
 
 <div class="row">
