--- a/Oasis_Web/Views/Shared/_BlankLayout.cshtml
+++ b/Oasis_Web/Views/Shared/_BlankLayout.cshtml
@@ -8,15 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Synovora" name="description" />
     <meta content="Synovora" name="author" />
-    <!-- App favicon -->
     <link rel="shortcut icon" href="~/assets/images/favicon.ico">
-
-    <!-- Bootstrap Css -->
     <link href="~/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
-    <!-- Icons Css -->
     <link href="~/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-    <!-- App Css-->
-    <link href="~/assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
+    <link href="~/assets/css/app.css" id="app-style" rel="stylesheet" type="text/css" />
 
     @RenderSection("styles", required: false)
 
