git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis/branches/web@547 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/Oasis_Web/assets/css/app-dark.css
+++ b/Oasis_Web/assets/css/app-dark.css
@@ -105,11 +105,11 @@ File: Main dark Css File
   color: #a6b0cf; }
 
 .noti-icon .badge {
-  position: absolute;
-  top: 12px; }
-.noti-icon .badge {
+    position: absolute;
     right: 5px;
+    top: 12px;
 }
+
 .notification-item .media {
   padding: 0.75rem 1rem; }
   .notification-item .media:hover {
