--- a/Oasis_Web/assets/css/app.css
+++ b/Oasis_Web/assets/css/app.css
@@ -107,9 +107,6 @@ File: Main Css File
 .noti-icon .badge {
   position: absolute;
   top: 12px; }
-.noti-icon .badge {
-    right: 5px;
-}
 
 .notification-item .media {
   padding: 0.75rem 1rem; }
@@ -3351,5 +3348,11 @@ input[switch="dark"]:checked + label {
     top: 12px; }
 
 .boxAutoSuiviItem {
-    margin-bottom: 8px;
+    padding: 8px;
+    align-items: center;
+    margin-bottom:4px;
+}
+
+.boxAutoSuiviItem h6 {
+    margin-right: 12px;
 }
