--- a/Oasis_Web/Views/Auth/auth-recoverpw.cshtml
+++ b/Oasis_Web/Views/Auth/auth-recoverpw.cshtml
@@ -15,8 +15,8 @@
                         <div class="row">
                             <div class="col-7">
                                 <div class="text-primary p-4">
-                                    <h5 class="text-primary"> Reset Password</h5>
-                                    <p>Re-Password with Synovora.</p>
+                                    <h5 class="text-primary"> Changement de mot de passe</h5>
+                                    <p>Re-Password Synovora.</p>
                                 </div>
                             </div>
                             <div class="col-5 align-self-end">
@@ -37,13 +37,18 @@
 
                         <div class="p-2">
                             <div class="alert alert-success text-center mb-4" role="alert">
-                                Enter your Email and instructions will be sent to you!
+                               Entrez votre nouveau mot de passe
                             </div>
                             <form class="form-horizontal" action="@Url.Action("Index","Dashboard")">
 
                                 <div class="form-group">
-                                    <label for="useremail">Email</label>
-                                    <input type="email" class="form-control" id="useremail" placeholder="Enter email">
+                                    <label for="useremail">Mot de passe</label>
+                                    <input type="email" class="form-control" id="password" placeholder="Entrez votre mot de passe">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="useremail">Mot de passe (Confirmation)</label>
+                                    <input type="email" class="form-control" id="passwordbis" placeholder="Confirmer votre mot de passe">
                                 </div>
 
                                 <div class="form-group row mb-0">
@@ -58,8 +63,8 @@
                     </div>
                 </div>
                 <div class="mt-5 text-center">
-                    <p>Remember It ? <a href="@Url.Action("auth-login","Auth")" class="font-weight-medium text-primary"> Sign In here</a> </p>
-                    <p>© 2020 Synovora. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                    @*<p>Remember It ? <a href="@Url.Action("auth-login","Auth")" class="font-weight-medium text-primary"> Sign In here</a> </p>*@
+                    <p>© 2020 Synovora.</p>
                 </div>
 
             </div>
