--- a/Oasis_Web/Assets/css/app.css
+++ b/Oasis_Web/Assets/css/app.css
@@ -7,11 +7,6 @@ Contact: themesbrand@gmail.com
 File: Main Css File
 */
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap");
-
-body {
-    position: relative;
-}
-
 #page-topbar {
   position: fixed;
   top: 0;
@@ -3905,20 +3900,11 @@ div.dataTables_wrapper div.dataTables_filter {
 
 .blog-play-icon {
   position: absolute;
-  top: 50%;vertical-menu
+  top: 50%;
   left: 0;
   right: 0;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   margin: 0px auto; }
-
-.cursor-pointer {
-    cursor: pointer;
-}
-
-.footer-bs {
-    position: fixed;
-    height: 100px;
-    bottom: 0;
-    width: 90%;
-}
+ranslateY(-50%);
+  margin: 0px auto; }
