--- a/Oasis_Web/Views/Shared/_head_css.cshtml
+++ b/Oasis_Web/Views/Shared/_head_css.cshtml
@@ -1,6 +1,6 @@
 ﻿<!-- Bootstrap Css -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>-->
 
 <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet" crossorigin="anonymous">
 
@@ -10,8 +10,16 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
+<!-- Icons Css -->
+<!--<link href="~/assets/css/icons.min.css" rel="stylesheet" type="text/css" />-->
+<!-- App Css-->
+<!--<link href="~/assets/css/app.css" id="app-style" rel="stylesheet" type="text/css" />-->
+<!-- Bootstrap Css -->
+<link href="~/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" />
 
 <!-- Icons Css -->
-<link href="~/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/icons.min.css" rel="stylesheet" />
+
 <!-- App Css-->
-<link href="~/assets/css/app.css" id="app-style" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/app.min.css" id="app-style" rel="stylesheet" />
+
