--- a/Oasis_Web/Views/Shared/_head_css.cshtml
+++ b/Oasis_Web/Views/Shared/_head_css.cshtml
@@ -15,11 +15,11 @@
 <!-- App Css-->
 <!--<link href="~/assets/css/app.css" id="app-style" rel="stylesheet" type="text/css" />-->
 <!-- Bootstrap Css -->
-<link href="~/assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" />
+<link href="~/assets/css/bootstrap.css" id="bootstrap-style" rel="stylesheet" />
 
 <!-- Icons Css -->
-<link href="~/assets/css/icons.min.css" rel="stylesheet" />
+<link href="~/assets/css/icons.css" rel="stylesheet" />
 
 <!-- App Css-->
-<link href="~/assets/css/app.min.css" id="app-style" rel="stylesheet" />
+<link href="~/assets/css/app.css" id="app-style" rel="stylesheet" />
 
