--- a/Oasis_Web/Views/Shared/_head_css.cshtml
+++ b/Oasis_Web/Views/Shared/_head_css.cshtml
@@ -1,8 +1,8 @@
 ﻿
 <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet" crossorigin="anonymous">
-@*<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"></script>*@
+        crossorigin="anonymous"></script>
 <!-- Bootstrap Css -->
 <link href="~/assets/css/bootstrap.css" id="bootstrap-style" rel="stylesheet" />
 
